merging #90403 work from CVS; builds and runs somehow